--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "cy:open": "cypress open",
     "cy:mobile": "cypress open --config viewportWidth=370 viewportHeight=660",
-    "cy:mobile-headless": "cypress run --config viewportWidth=370 viewportHeight=660",
-    "test": "cypress run"
+    "test": "cypress run",
+    "test:mobile": "cypress run --config viewportWidth=370 viewportHeight=660"
   },
   "repository": {
     "type": "git",
